# HelloJNI

./: README.md  build.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/hellojni/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  HelloJni.c  native-lib.cpp
app/src/main/java/com/example/hellojni/: JNIHelper.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/hellojni/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
